objects/Application__c.object
<CustomObject>
    <fields>
        <fullName>Support_Email__c</fullName>
        <description>Field to allow linking to an email or url, AIM, 04.11.19</description>
        <label>Support Link</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Supporting_Organization__c</fullName>
        <description>Organization supporting the development of this application</description>
        <inlineHelpText>Organization supporting the development of this application</inlineHelpText>
        <label>Supporting Organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BIAC Federal Staff</fullName>
                </value>
                <value>
                    <fullName>ERG</fullName>
                </value>
                <value>
                    <fullName>FedSight</fullName>
                </value>
                <value>
                    <fullName>GDIT</fullName>
                </value>
                <value>
                    <fullName>Innovate</fullName>
                </value>
                <value>
                    <fullName>Owning Office Federal Staff</fullName>
                </value>
                <value>
                    <fullName>Office’s Federal Staff</fullName>
                </value>
                <value>
                    <fullName>To Be Determined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_Owner_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>System Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Applications (System Owner)</relationshipLabel>
        <relationshipName>Applications2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>System_Title__c</fullName>
        <inlineHelpText>FITARA User Group</inlineHelpText>
        <label>System Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Users__c</fullName>
        <description>Sum Total of EPA Full &amp; EPA Starter Users</description>
        <formula>EPA_Starter_Users__c + EPA_Full_Users__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum Total of EPA Full &amp; EPA Starter Users</inlineHelpText>
        <label>Total Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Workflow</fullName>
                </value>
                <value>
                    <fullName>Fill and Print</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UI_Type__c</fullName>
        <description>User interface type.  For Application Inventory Management.  Timothy Hinds, 2018.08.31.</description>
        <inlineHelpText>User interface type: 1 for EPA personnel without Salesforce license, 3 for EPA personnel with Salesforce license.  (2 for Salesforce license only no longer used.)</inlineHelpText>
        <label>UI Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Workflow</fullName>
                </value>
                <value>
                    <fullName>Fill and Print</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Version_in_Development__c</fullName>
        <description>Version in Development,AIM,04.04.19</description>
        <inlineHelpText>Version in Development</inlineHelpText>
        <label>Version in Development</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weblink__c</fullName>
        <label>Weblink</label>
        <type>Url</type>
    </fields>
    <description>Software applications and instances of applying for something.  First used in the Application Inventory Management system within the BAP, but also available for other purposes.  (As with all objects, various kinds of data can be stored, differentiated by record type.)</description>
    <label>Application</label>
    <nameField>
        <displayFormat>EPA-APP-{000000}</displayFormat>
        <label>Application ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>Private</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Application_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Notes__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Forms_BAP_Workflow_Under_Development</fullName>
        <columns>Application_Name__c</columns>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Primary_Contact__c</columns>
        <filterScope>Everything</filterScope>
        <label>Forms - BAP Workflow</label>
    </listViews>
    <listViews>
        <fullName>Software_Applications_All</fullName>
        <columns>NAME</columns>
        <columns>Application_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Federal_Project_Manager__c</columns>
        <columns>Supporting_Organization__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Application__c.Software_Application</value>
        </filters>
        <label>Software Applications All</label>
    </listViews>
    <listViews>
        <fullName>Test</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>Application_Name__c</columns>
        <columns>Federal_Project_Manager__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Application_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Development</value>
        </filters>
        <label>Hinds Working List</label>
    </listViews>
    <recordTypes>
        <fullName>Forms</fullName>
        <active>true</active>
        <label>Form</label>
    </recordTypes>
    <recordTypes>
        <fullName>Software_Application</fullName>
        <active>true</active>
        <description>BIAC Software Application Projects</description>
        <label>Software Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>Software_Application_Management</fullName>
        <active>true</active>
        <description>Specialized support information</description>
        <label>Software Application Management</label>
    </recordTypes>
    <validationRules>
        <fullName>Data_Availability_Comments_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR (
IsPickVal( Data_Availability_External_Requirement__c, '1: Desired if no cost to owner'),
IsPickVal( Data_Availability_External_Requirement__c,'2: Required and owner willing to pay')),
IsBlank(Data_Availability_Comments__c)
)</errorConditionFormula>
        <errorDisplayField>Data_Availability_Comments__c</errorDisplayField>
        <errorMessage>Please provide additional requirements for data availability when selected as desired or required.</errorMessage>
    </validationRules>
</CustomObject>